@@ -1,3 +1,10 @@
+2012-04-07 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/ralloc2.cc:
+	  Fix an invalid read.
+	* src/z80/gen.c:
+	  Fix a memory leak.
+
 2012-04-07 Borut Razem <borut.razem AT gmail.com>
 
 	* src/common.h, SDCCglobal.h: fixed mingw32 build on derna:
